/*
 * This file is part of Bisq.
 *
 * Bisq is free software: you can redistribute it and/or modify it
 * under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or (at
 * your option) any later version.
 *
 * Bisq is distributed in the hope that it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 * FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public
 * License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with Bisq. If not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto3";
package io.bisq.protobuffer;

import "pb.proto";

option java_package = "bisq.proto.grpc";
option java_multiple_files = true;

///////////////////////////////////////////////////////////////////////////////////////////
// Version
///////////////////////////////////////////////////////////////////////////////////////////

service GetVersion {
    rpc GetVersion (GetVersionRequest) returns (GetVersionReply) {
    }
}

message GetVersionRequest {
}

message GetVersionReply {
    string version = 1;
}

///////////////////////////////////////////////////////////////////////////////////////////
// Balance
///////////////////////////////////////////////////////////////////////////////////////////

service GetBalance {
    rpc GetBalance (GetBalanceRequest) returns (GetBalanceReply) {
    }
}

message GetBalanceRequest {
}

message GetBalanceReply {
    uint64 balance = 1;
    string error_message = 2; // optional error message
}

///////////////////////////////////////////////////////////////////////////////////////////
// TradeStatistics
///////////////////////////////////////////////////////////////////////////////////////////

service GetTradeStatistics {
    rpc GetTradeStatistics (GetTradeStatisticsRequest) returns (GetTradeStatisticsReply) {
    }
}

message GetTradeStatisticsRequest {
}

message GetTradeStatisticsReply {
    repeated TradeStatistics2 TradeStatistics = 1;
}

///////////////////////////////////////////////////////////////////////////////////////////
// Offer
///////////////////////////////////////////////////////////////////////////////////////////

service GetOffers {
    rpc GetOffers (GetOffersRequest) returns (GetOffersReply) {
    }
}

message GetOffersRequest {
}

message GetOffersReply {
    repeated Offer offers = 1;
}

///////////////////////////////////////////////////////////////////////////////////////////
// PaymentAccount
///////////////////////////////////////////////////////////////////////////////////////////

service GetPaymentAccounts {
    rpc GetPaymentAccounts (GetPaymentAccountsRequest) returns (GetPaymentAccountsReply) {
    }
}

message GetPaymentAccountsRequest {
}

message GetPaymentAccountsReply {
    repeated PaymentAccount paymentAccounts = 1;
}

///////////////////////////////////////////////////////////////////////////////////////////
// PlaceOffer
///////////////////////////////////////////////////////////////////////////////////////////

service PlaceOffer {
    rpc PlaceOffer (PlaceOfferRequest) returns (PlaceOfferReply) {
    }
}

message PlaceOfferRequest {
    string currencyCode = 1;
    string direction = 2;
    uint64 price = 3;
    bool useMarketBasedPrice = 4;
    double marketPriceMargin = 5;
    uint64 amount = 6;
    uint64 minAmount = 7;
    double buyerSecurityDeposit = 8;
    string paymentAccountId = 9;
}

message PlaceOfferReply {
    bool result = 1;
}

///////////////////////////////////////////////////////////////////////////////////////////
// RemoveWalletPassword
///////////////////////////////////////////////////////////////////////////////////////////

service RemoveWalletPassword {
    rpc RemoveWalletPassword (RemoveWalletPasswordRequest) returns (RemoveWalletPasswordReply) {
    }
}

message RemoveWalletPasswordRequest {
    string password = 1;
}

message RemoveWalletPasswordReply {
    bool success = 1;
    string error_message = 2; // optional error message
}

///////////////////////////////////////////////////////////////////////////////////////////
// SetWalletPassword
///////////////////////////////////////////////////////////////////////////////////////////

service SetWalletPassword {
    rpc SetWalletPassword (SetWalletPasswordRequest) returns (SetWalletPasswordReply) {
    }
}

message SetWalletPasswordRequest {
    string password = 1;
    string newPassword = 2;
}

message SetWalletPasswordReply {
    bool success = 1;
    string error_message = 2; // optional error message
}

///////////////////////////////////////////////////////////////////////////////////////////
// LockWallet
///////////////////////////////////////////////////////////////////////////////////////////

service LockWallet {
    rpc LockWallet (LockWalletRequest) returns (LockWalletReply) {
    }
}

message LockWalletRequest {
}

message LockWalletReply {
    bool success = 1;
    string error_message = 2; // optional error message
}

///////////////////////////////////////////////////////////////////////////////////////////
// UnlockWallet
///////////////////////////////////////////////////////////////////////////////////////////

service UnlockWallet {
    rpc UnlockWallet (UnlockWalletRequest) returns (UnlockWalletReply) {
    }
}

message UnlockWalletRequest {
    string password = 1;
    uint64 timeout = 2;
}

message UnlockWalletReply {
    bool success = 1;
    string error_message = 2; // optional error message
}
